resources/5-prefix-routing/6-istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway #uses Istio default gateway implementation 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "*" # Domain name of external website
    # - "fleetman.com"
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  hosts: # which incoming hosts we are applying proxy rules to, Here we need to apply for proxy rules for Istio Gateway not the webapp
    - "*" # copy the value in gateway hosts - usually a Domain Name
    # - "fleetman.com"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
      - uri: # IF
          prefix: "/experimental"
      route: # THEN
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: experimental

    - match:
      - uri: # IF
          prefix: "/canary"
      route: # THEN
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: experimental

    - match:
      - uri: # IF
          prefix: "/"
      route: # THEN
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: original
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp
  namespace: default
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
